k3s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-nestjs-microservice-andrejschefer
