k3s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nestjs-microservice-andrejschefer
  labels:
    app: demo-nestjs-microservice-andrejschefer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-nestjs-microservice-andrejschefer
  template:
    metadata:
      labels:
        app: demo-nestjs-microservice-andrejschefer
    spec:
      serviceAccountName: azure-developer
      imagePullSecrets:
        - name: my-private-docker-registry
      containers:
        - name: demo-nestjs-microservice-andrejschefer
          image: repo.andrejschefer.de/schefer/alpina/demo-nestjs-microservice-andrejschefer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
