k3s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-nestjs-microservice-andrejschefer-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: demo-nestjs-microservice.andrejschefer.de
      http:
        paths:
          - backend:
              serviceName: demo-nestjs-microservice-andrejschefer
              servicePort: nestjs-ms-port

  tls:
    - hosts:
      - demo-nestjs-microservice.andrejschefer.de
      secretName: demo-nestjs-microservice-andrejschefer-tls
